--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-file:///C:/Users/Administrator/Desktop/resume.html
+<!DOCTYPE html>
+<html>
+<body>
+<h1> resume kong di na push hehe <h1>
+</body>
+</html>
