Edited service, about and index

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Responsive portfolio website - Bedimcode</title>
+      <title>Nadia Angela's Portfolio</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -77,7 +77,7 @@
                <div class="home__data grid">
                   <h1 class="home__name">Nadia Angela Flores</h1>
 
-                  <h2 class="home__profession">Web & Visual Designer</h2>
+                  <h2 class="home__profession">Web & Graphic Designer</h2>
 
                   <div class="home__social">
                      <a href="https://github.com/" target="_blank" class="home__social-link">
@@ -109,35 +109,35 @@
             <div class="service__container container grid">
                <article class="services__card">
                   <i class="ri-code-s-slash-line services__icon"></i>
-                  <h2 class="services__title">Web Developer</h2>
+                  <h2 class="services__title">UI/UX Design</h2>
                   <p class="services__description">
                      Eye appealing and sophisticated 
                      design interfaces that are efficient and pleasant to use for the user.
                   </p>
 
-                  <button class="services__button button">Know More</button>
+                  <button class="services__button button">Click here to know more</button>
 
                   <div class="services__modal">
                      <div class="services__modal-content">
                         <i class="ri-close-line services__modal-close"></i>
 
-                        <h2 class="services__modal-title">Web Developer</h2>
+                        <h2 class="services__modal-title">UI/UX</h2>
 
                         <ul class="services__modal-lists grid">
                            <li class="services__modal-item">
-                              Create professional and quality websites at the client's request
+                              HTML, CSS, JavaScript, front-end frameworks, and basic design principles.
                            </li>
 
                            <li class="services__modal-item">
-                              I do web design in prototypes
+                              User research, wireframing, user testing, prototyping, and information architecture.
                            </li>
 
                            <li class="services__modal-item">
-                              I do graphic layout designs
+                              Visual design, typography, color theory, layout, and branding consistency.
                            </li>
 
                            <li class="services__modal-item">
-                              I position yor website with advances SEO
+                              Component-based design, documentation, collaboration, and a strong grasp of both design and development.
                            </li>
                         </ul>
                      </div>
@@ -146,27 +146,27 @@
 
                <article class="services__card">
                   <i class="ri-pen-nib-line services__icon"></i>
-                  <h2 class="services__title">Web Designer</h2>
+                  <h2 class="services__title">Graphic Designer</h2>
                   <p class="services__description">
                      Eye appealing and sophisticated 
                      design interfaces that are efficient and pleasant to use for the user.
                   </p>
 
-                  <button class="services__button button">Know More</button>
+                  <button class="services__button button">Click here to know more</button>
 
                   <div class="services__modal">
                      <div class="services__modal-content">
                         <i class="ri-close-line services__modal-close"></i>
 
-                        <h2 class="services__modal-title">Web Designing</h2>
+                        <h2 class="services__modal-title">Graphic Designing</h2>
 
                         <ul class="services__modal-lists grid">
                            <li class="services__modal-item">
-                              Create professional and quality websites at the client's request
+                              Brand strategy, logo design, typography, color psychology, and storytelling through design.
                            </li>
 
                            <li class="services__modal-item">
-                              I do web design in prototypes
+                              Project management, leadership, creativity, conceptualization, and strong communication skills.
                            </li>
 
                            <li class="services__modal-item">
