--- a/work.html
+++ b/work.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Work - Responsive portfolio website - Bedimcode</title>
+      <title>My work, designs, and ideas!</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
