--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>About - Responsive portfolio website - Bedimcode</title>
+      <title>All about Nadia Angela</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
@@ -97,6 +97,7 @@
                         <img src="assets/img/about-git.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/about-github.svg" alt="image" class="about__skills-img">
                         <img src="assets/img/about-figma.svg" alt="image" class="about__skills-img">
+                        <img src="assets/img/about-canva.svg" alt="image" class="about__skills-img">
                      </div>
                   </div>
                </div>
