--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       <!--=============== CSS ===============-->
       <link rel="stylesheet" href="assets/css/styles.css">
 
-      <title>Contact - Responsive portfolio website - Bedimcode</title>
+      <title>Contact</title>
    </head>
    <body>
       <!--==================== HEADER ====================-->
